[package]
name = "mirror-staking"
version = "2.2.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A Staking contract for Mirror Protocol - distribute rewards to stakers"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8.0" } 
terraswap = "2.4.0"
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
mirror-protocol = { version = "2.2.0", path = "../../packages/mirror_protocol" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tefi-oracle = "0.2.0"

[dev-dependencies]
terra-cosmwasm = { version = "2.2.0" }
cosmwasm-schema = "0.16.0"
